syntax = "proto3";

package cr8r.core;

message PDefinition {
    message POverriddenToolchain {
        string version = 1;
    }

    message POverriddenPackage {
        string name = 1;
        string version = 2;
    }

    message PPatchedPackage {
        string name = 1;
        string attachment_id = 2;
    }

    POverriddenToolchain overridden_toolchain = 1;
    repeated POverriddenPackage overridden_packages = 2;
    repeated PPatchedPackage patched_package = 3;
}